fix some error